footer menu xs size wrap fix

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -280,6 +280,7 @@ h3 {
 
         &__items {
             display: flex;
+            flex-wrap: wrap;
             justify-content: space-around;
 
             &__item {
